<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:id="@+id/photo_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/item_photo"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:id="@+id/item_camera"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_title_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_title"
                android:hint="@string/item_title_hint"/>


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_detail_label"
        android:layout_below="@+id/photo_layout"
        android:id="@+id/detail_textview"/>

    <EditText
        android:id="@+id/item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_detail_hint"
        android:layout_below="@+id/detail_textview"/>

    <Button
        android:id="@+id/item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_detail"/>

    <CheckBox
        android:id="@+id/item_have"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_have"
        android:layout_below="@+id/item_date"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>